--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,22 @@
 <h1>Welcome to angular application</h1>
 <p>Test Application</p>
-<h2>Test Application</h2>
-<h3>git example</h3>
-<p> this is my first git applicaton</p>
+<mat-card appearance="outlined">
+    <mat-card-header>
+      <mat-card-title> Australian Shepherd</mat-card-title>
+      <mat-card-subtitle>Herding group</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-actions>
+        <app-home></app-home>
+     
+    </mat-card-actions>
+  </mat-card>
+  <br>
+  <mat-card appearance="outlined">
+    <mat-card-header>
+      <mat-card-title>Poodle</mat-card-title>
+      <mat-card-subtitle>Non-sporting group</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-actions align="end">
+      
+    </mat-card-actions>
+  </mat-card>
