--- a/src/app/common/about/about.component.html
+++ b/src/app/common/about/about.component.html
@@ -1,11 +1,11 @@
 <p>about works!</p>
 
 
-<h2 style="background-color:DodgerBlue;">Hello World</h2>
+<h3 style="background-color:DodgerBlue;">Hello World</h3>
     
 <p style="background-color:Tomato;">
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
-Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
+ ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 </p>
 
 
