smalls changes in about c

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     </mat-card-header>
     <mat-card-actions>
         <app-home></app-home>
-     
+        
     </mat-card-actions>
   </mat-card>
   <br>
@@ -20,3 +20,4 @@
       
     </mat-card-actions>
   </mat-card>
+  <app-about></app-about>
