--- a/src/app/common/about/about.component.html
+++ b/src/app/common/about/about.component.html
@@ -1,9 +1,9 @@
 <p>about works!</p>
 
 
-<h3 style="background-color:DodgerBlue;">Hello World</h3>
+<h3 style="background-color:yellow;">Hello World</h3>
     
-<p style="background-color:Tomato;">
+<p style="background-color:green;">
 Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.
  ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.
 </p>
