new pipe havebeen added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,22 +2,12 @@
 <p>Test Application</p>
 <mat-card appearance="outlined">
     <mat-card-header>
-      <mat-card-title> Australian Shepherd</mat-card-title>
-      <mat-card-subtitle>Herding group</mat-card-subtitle>
+      <mat-card-title> {{title  | uppercase}}</mat-card-title>
+      <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
     </mat-card-header>
     <mat-card-actions>
-        <app-home></app-home>
+        
         
     </mat-card-actions>
-  </mat-card>
-  <br>
-  <mat-card appearance="outlined">
-    <mat-card-header>
-      <mat-card-title>Poodle</mat-card-title>
-      <mat-card-subtitle>Non-sporting group</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-actions align="end">
-      
-    </mat-card-actions>
-  </mat-card>
-  <app-about></app-about>
+ 
+  
