--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,10 +3,20 @@
 <mat-card appearance="outlined">
     <mat-card-header>
       <mat-card-title> {{title  | uppercase}}</mat-card-title>
-      <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
+      <mat-card-subtitle>{{subtitle | lowercase}}</mat-card-subtitle>
+    
     </mat-card-header>
     <mat-card-actions>
-        
+      <span>{{todaydate | date:'dd/MMM/yyyy'}} </span>
+      <br>
+      <br/>
+
+      <span>{{salary  |currency:'EUR'}}</span>
+
+      <br>
+      <span>{{salary | number:'1.2-2'}}</span>
+      <br>
+        <span>{{_obj|json}}</span>
         
     </mat-card-actions>
  
